; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/mic/scif/extr_scif_dma.c__get_local_va.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/mic/scif/extr_scif_dma.c__get_local_va.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scif_window = type { i32, i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.page** }
%struct.page = type { i32 }

@PAGE_SHIFT = common dso_local global i32 0, align 4
@PAGE_MASK = common dso_local global i32 0, align 4
@SCIF_WINDOW_SELF = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, %struct.scif_window*, i64)* @_get_local_va to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @_get_local_va(i32 %0, %struct.scif_window* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.scif_window*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.page**, align 8
  store i32 %0, i32* %4, align 4
  store %struct.scif_window* %1, %struct.scif_window** %5, align 8
  store i64 %2, i64* %6, align 8
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.scif_window*, %struct.scif_window** %5, align 8
  %13 = getelementptr inbounds %struct.scif_window, %struct.scif_window* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = sub nsw i32 %11, %14
  %16 = load i32, i32* @PAGE_SHIFT, align 4
  %17 = ashr i32 %15, %16
  store i32 %17, i32* %7, align 4
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* @PAGE_MASK, align 4
  %20 = xor i32 %19, -1
  %21 = and i32 %18, %20
  store i32 %21, i32* %8, align 4
  store i8* null, i8** %9, align 8
  %22 = load %struct.scif_window*, %struct.scif_window** %5, align 8
  %23 = getelementptr inbounds %struct.scif_window, %struct.scif_window* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @SCIF_WINDOW_SELF, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %42

27:                                               ; preds = %3
  %28 = load %struct.scif_window*, %struct.scif_window** %5, align 8
  %29 = getelementptr inbounds %struct.scif_window, %struct.scif_window* %28, i32 0, i32 2
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load %struct.page**, %struct.page*** %31, align 8
  store %struct.page** %32, %struct.page*** %10, align 8
  %33 = load %struct.page**, %struct.page*** %10, align 8
  %34 = load i32, i32* %7, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds %struct.page*, %struct.page** %33, i64 %35
  %37 = load %struct.page*, %struct.page** %36, align 8
  %38 = call i8* @page_address(%struct.page* %37)
  %39 = load i32, i32* %8, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr i8, i8* %38, i64 %40
  store i8* %41, i8** %9, align 8
  br label %42

42:                                               ; preds = %27, %3
  %43 = load i8*, i8** %9, align 8
  ret i8* %43
}

declare dso_local i8* @page_address(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
